--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
                           <input type="email" name="EMAIL" class="form-control form-control__input user-signup__email" pattern="/^[a-zA-Z0-9+-_]+(\.[_a-zA-Z0-9+]+)*@[a-zA-Z0-9+-_]+(\.[a-zA-Z0-9+-_]+)*(\.[a-zA-Z]+)$/" placeholder="Email" aria-required="true" required="required">
                         </div>        
                       </div>
+			      <div class="mt-td--centered-vertical user-signup__col-1">
+                        <div class="user-signup__form-group m-lg-v form-group col-sm-12">
+                          <input type="text" name="FNAME" class="form-control form-control__input user-signup__text" " placeholder="Your First Name" aria-required="true" required="required">
+                        </div>        
+                      </div>
+			      <div class="mt-td--centered-vertical user-signup__col-1">
+                        <div class="user-signup__form-group m-lg-v form-group col-sm-12">
+                          <input type="text" name="LNAME" class="form-control form-control__input user-signup__text" placeholder="Your Surname / Family Name" aria-required="true" required="required">
+                        </div>        
+                      </div>
                       <div class="mt-td--centered-vertical user-signup__col-2">
                         <div class="user-signup__form-group m-lg-v form-group text-center">
                           <button type="submit" class="btn btn-default submit user-signup__submit"><span>SUBMIT</span></button>
